[tool.poetry]
name = "databricks-dbt-dais2023-workflows-demo"
version = "0.1.0"
description = ""
authors = ["Prashanth Babu <prashanth.babu@gmail.com>"]
readme = "README.md"
#packages = [{include = "databricks-dbt-dais2023-workflows-demo"}]

[tool.poetry.dependencies]
python = "^3.8"
dbt-databricks = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
